# beamish

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: beamish-autostart.desktop  beamish.desktop  icon.icns  org.beamish.vif-helper.policy
flatpak/: README.md  cargo-sources.json  io.github.joeleaver.beamish.desktop  io.github.joeleaver.beamish.metainfo.xml  io.github.joeleaver.beamish.yml
src/: main.rs
