[package]
name = "beamish"
version = "0.1.0"
edition = "2021"
description = "Beamish — a Linux GUI to send & receive files with Android phones over Quick Share"

[dependencies]
rinch = { git = "https://github.com/joeleaver/rinch", branch = "fix/cross-thread-signal-repaint", features = ["desktop", "components", "theme", "debug", "system-tray"] }
rqs_lib = { git = "https://github.com/joeleaver/rquickshare", branch = "beamish" }
tokio = { version = "1", features = ["full"] }
rfd = "0.15"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 2
